--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "tools/DRAMSim2"]
 	path = tools/DRAMSim2
 	url = https://github.com/umd-memsys/DRAMSim2
+[submodule "sw"]
+	path = sw
+	url = https://github.com/nmcicek/deepreuse-software
